force-app/main/default/objects/Digital_Lead__c/Digital_Lead__c.object-meta.xml
<CustomObject>
    <label>Digital Lead</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Digital Lead Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>