force-app/main/default/objects/Digital_Lead__c/fields/Ad_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Id__c</fullName>
    <label>Ad Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>