force-app/main/default/objects/Digital_Lead__c/fields/Adset_Id__c.field-meta.xml
<CustomField>
    <fullName>Adset_Id__c</fullName>
    <label>Adset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>