force-app/main/default/objects/Digital_Lead__c/fields/Adset_Name__c.field-meta.xml
<CustomField>
    <fullName>Adset_Name__c</fullName>
    <label>Adset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>