force-app/main/default/objects/Digital_Lead__c/fields/Executed__c.field-meta.xml
<CustomField>
    <fullName>Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executed</label>
    <type>Checkbox</type>
</CustomField>