force-app/main/default/objects/Digital_Lead__c/fields/Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Form_Id__c</fullName>
    <label>Form Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>