force-app/main/default/objects/Digital_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Digital Leads</relationshipLabel>
    <relationshipName>Digital_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>