force-app/main/default/objects/Digital_Lead__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity_c</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Digital Leads</relationshipLabel>
    <relationshipName>Digital_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>