force-app/main/default/objects/Digital_Lead__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>New Enquiry Against Lead</fullName>
            </value>
            <value>
                <fullName>New Enquiry Against Account</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>New Enquiry Against Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>