force-app/main/default/objects/Digital_Lead__c/fields/Retailer_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Item_Id__c</fullName>
    <label>Retailer Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>