force-app/main/default/objects/Digital_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Executed__c</columns>
    <columns>Platform__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>