force-app/main/default/objects/Digital_Lead__c/listViews/Today_s_Digital_Lead.listView-meta.xml
<ListView>
    <fullName>Today_s_Digital_Lead</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Executed__c</columns>
    <columns>Platform__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Digital Lead</label>
</ListView>