force-app/main/default/objects/Digital_Lead__c/listViews/Todays_Error.listView-meta.xml
<ListView>
    <fullName>Todays_Error</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Error</label>
</ListView>